# YodaBuffett

./: .gitignore  AI_QUICK_START.md  ARCHITECTURE_MAP.md  CLAUDE-MASTER.md  CLAUDE.md  CONSOLIDATION_AUDIT.md  FOUNDATION_STATUS.md  NEXT_STEPS.md  SESSION_SUMMARY_2026-06-02.md  VECTOR_PREDICTION_SUMMARY.md  aak_fat_pitch_evaluation.md  fat-pitch-checklist-v2.md  glossary.md
.ai-context/: README.md  current-work.md
.claude/: settings.local.json
Checklists/: APPENDIX_A_PORTFOLIO_MANAGEMENT.md  APPENDIX_B_POST_INVESTMENT_MONITORING.md  APPENDIX_C_STOP_LOSS_RISK_MANAGEMENT.md  APPENDIX_E_ONE_TIME_SETUP.md  APPENDIX_F_CORE_PRINCIPLES.md  FRAUD_DETECTOR.md
Checklists-for-human/:  SHORT_PITCH_SCREENER.md  APPENDIX_D_CULTURE_QUICK_REFERENCE.md  BAN-LIST-DO-NOT-INVEST.md  EARLY_STAGE_BUSINESS_EVALUATOR.md  ESTABLISHED_BUSINESS_EVALUATOR.md  FAT_PITCH_SCREENER_MAIN.md  GROWTH_STAGE_BUSINESS_EVALUATOR.md  MATURE_BUSINESS_EVALUATOR.md  QUICK-BUSINESS-ROUTER.md
Teachings-for-human/: Bank REIT Pricing Paradox.md
backend/: .dockerignore  .gitignore  AB_ARBITRAGE_SYSTEM_EXPLANATION.md  CLAUDE.md  DAILY_AUTOMATION_QUICKREF.md  DEBT_ADJUSTED_GROWTH_STRATEGY_SUMMARY.md  FUNDAMENTALS_GAP_ANALYSIS_REPORT.md  MFN_COLLECTOR_FIXES.md  OLLAMA_SETUP.md  README.md  SLUG_RESOLUTION_STRATEGY.md  ab_arbitrage_backtest.py  ab_arbitrage_long_only_backtest.py  ab_arbitrage_pair_trading_backtest.py  ab_premium_discount_backtest.py  ab_premium_discount_backtest_final.py  ab_premium_discount_backtest_fixed.py  ab_premium_discount_backtest_reconciled.py  ab_share_analyzer.py  accurate_undownloaded_check.py  (+325 more)
products/screener/backend/: .env  README.md  pyproject.toml  simple_db_test.py  start_server.py  start_simple.py
products/screener/backend/app/: main.py
products/screener/backend/app/api/v1/: backtest.py  metrics.py  screener.py
products/screener/backend/app/core/: config.py  database.py
products/screener/backend/app/models/: screener.py
products/screener/backend/app/schemas/: screener.py
products/screener/backend/app/services/: backtest_service.py  metric_calculator.py  metrics_service.py  query_builder.py  screener_service.py
products/screener/backend/migrations/: 001_create_screener_tables.sql  002_add_indexes_optimization.sql
products/screener/backend/scripts/: populate_screening_data.py
(+493 files in other folders)
